# workflow-dev

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CODE_REVIEW.md  Dockerfile.api  Dockerfile.ui  ISSUES.md  Makefile  RALPH_COMMANDS.md  RALPH_TASKS.md  README.md  SKILLS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.ralph/: activity.md  iteration-log.md  memory.md  ralph-loop.state.json
docs/plans/: 2026-03-24-fix-llm-tool-usage-cascade.md
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Avatar.tsx  Badge.tsx  Button.tsx  CancelModal.tsx  Card.tsx  Divider.tsx  ErrorBoundary.tsx  FilterDropdown.tsx  Input.tsx  LogViewer.tsx  PhaseTimeline.tsx  RetryBadge.tsx  SearchBar.tsx  Select.tsx  Skeleton.tsx  StatusBadge.tsx  Toast.tsx  TokenUsageCard.tsx  index.ts
frontend/e2e/: dashboard.spec.ts
frontend/lib/: sse.ts  types.ts
specs/001-issue-implementation-plan/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-issue-implementation-plan/checklists/: requirements.md
src/dev_workflow/: __init__.py  emitter.py  flow.py  interceptor.py  main.py  state.py
src/dev_workflow/api/: server.py  store.py
src/dev_workflow/crews/: __init__.py
src/dev_workflow/models/: __init__.py
src/dev_workflow/tools/: __init__.py  git_tool.py  github_tool.py  (+2 more)
tests/: conftest.py  test_api.py  test_crews.py  test_emitter.py  test_executor_validation.py  test_flow.py  test_state.py
(+19 files in other folders)
